<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.zt</groupId>
    <artifactId>stockCopy</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>4.1.28.Final</version>
        </dependency>

        <dependency>
            <groupId>com.googlecode.sli4j</groupId>
            <artifactId>sli4j-slf4j-log4j</artifactId>
            <version>2.0</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>19.0</version>
        </dependency>

        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>1.2.46</version>
        </dependency>

        <!--        <dependency>-->
        <!--            <groupId>com.cisc.zzt</groupId>-->
        <!--            <artifactId>zztclient</artifactId>-->
        <!--            <scope>system</scope>-->
        <!--            &lt;!&ndash;            <systemPath>${parent.basedir}/lib/zztmsg-2.0.3.jar</systemPath>&ndash;&gt;-->
        <!--            <systemPath>${project.basedir}/lib/zztclient-2.0.4.jar</systemPath>-->
        <!--        </dependency>-->

        <!--
           <dependency>
               <groupId>com.cisc.zzt</groupId>
               <artifactId>zztclient</artifactId>
               <version>2.0.4</version>
           </dependency>

           <dependency>
               <groupId>com.cisc.zzt</groupId>
               <artifactId>zztmsg</artifactId>
               <version>2.0.3</version>
           </dependency> -->

        <!--        <dependency>-->
        <!--            <groupId>com.cisc.zzt</groupId>-->
        <!--            <artifactId>zztmsg</artifactId>-->
        <!--            <scope>system</scope>-->
        <!--            &lt;!&ndash;            <systemPath>${parent.basedir}/lib/zztmsg-2.0.3.jar</systemPath>&ndash;&gt;-->
        <!--            <systemPath>${project.basedir}/lib/zztmsg-2.0.3.jar</systemPath>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>com.cisc.framework</groupId>-->
        <!--            <artifactId>apt</artifactId>-->
        <!--            <version>1.0.9</version>-->
        <!--            <scope>system</scope>-->
        <!--            <systemPath>${project.basedir}/lib/apt-1.0.9.jar</systemPath>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>org.quartz-scheduler</groupId>
            <artifactId>quartz</artifactId>
            <version>2.2.2</version>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-api</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>4.2.5.RELEASE</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.16.2</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.5</version>
        </dependency>
    </dependencies>


    <build>
        <finalName>stockCopy</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <appendAssemblyId>false</appendAssemblyId>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <!-- 此处指定main方法入口的class -->
                            <mainClass>com.zt.Server</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>assembly</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>